[gd_scene load_steps=26 format=3 uid="uid://gax23otcrmi"]

[ext_resource type="Script" path="res://Scripts/Start.gd" id="1_rtdsg"]
[ext_resource type="Texture2D" uid="uid://cmamnyxc85va0" path="res://Image/title_bg.png" id="1_w6y72"]
[ext_resource type="Texture2D" uid="uid://jeyqe7loo20u" path="res://Image/shining.png" id="2_k4snx"]
[ext_resource type="Texture2D" uid="uid://bsuplkxo7arsi" path="res://Image/title_man.png" id="3_dcb72"]
[ext_resource type="Texture2D" uid="uid://xq3ispqdtmdt" path="res://Image/salary.png" id="5_2vmpo"]
[ext_resource type="Texture2D" uid="uid://cvqbm3s6xern1" path="res://Image/tie1.png" id="5_n4shn"]
[ext_resource type="Texture2D" uid="uid://uiacam8wqjiu" path="res://Image/money1.png" id="6_tqkca"]
[ext_resource type="Texture2D" uid="uid://cx6auisphrksd" path="res://Image/lupin.png" id="6_ymiwv"]
[ext_resource type="Texture2D" uid="uid://cayij3fyr4543" path="res://Image/sketch1726219344400.png" id="7_06mta"]
[ext_resource type="Texture2D" uid="uid://dls4a2003njq6" path="res://Image/money2.png" id="7_jdhgj"]
[ext_resource type="Texture2D" uid="uid://8b7c1ut0bxim" path="res://Image/money3.png" id="8_4hl13"]
[ext_resource type="Texture2D" uid="uid://dimwif4cbsmen" path="res://Image/tie2.png" id="9_uvwy4"]
[ext_resource type="Texture2D" uid="uid://pwuoindu4yjv" path="res://Image/tie3.png" id="10_qk7vq"]
[ext_resource type="Texture2D" uid="uid://c3nmwy2swgyd4" path="res://Image/tie4.png" id="11_l4wi5"]
[ext_resource type="Texture2D" uid="uid://d2q3av8k0bona" path="res://Image/chat box.png" id="12_qqwcj"]
[ext_resource type="AudioStream" uid="uid://xw2q46pdt0g0" path="res://Sfx/start_scene_bg.wav" id="15_ojxld"]
[ext_resource type="AudioStream" uid="uid://eme0rgykujl1" path="res://Sfx/police_siren.mp3" id="16_n68e4"]

[sub_resource type="Gradient" id="Gradient_5gq0x"]
offsets = PackedFloat32Array(0, 0.75, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8o0ty"]
texture = ExtResource("7_06mta")
region_rect = Rect2(21, 114, 375, 314)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dtuxl"]
texture = ExtResource("7_06mta")
region_rect = Rect2(21, 114, 375, 314)
modulate_color = Color(0.67451, 0.67451, 0.67451, 1)

[sub_resource type="Animation" id="Animation_jbh25"]
resource_name = "chat_box"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_sh533"]
resource_name = "chat_box_disappearing"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f53vc"]
_data = {
"chat_box": SubResource("Animation_jbh25"),
"chat_box_disappearing": SubResource("Animation_sh533")
}

[sub_resource type="Animation" id="Animation_puyw2"]
resource_name = "main_menu"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BG/Spotlight:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BG/Man/Tie:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("5_n4shn"), ExtResource("9_uvwy4"), ExtResource("10_qk7vq"), ExtResource("11_l4wi5"), ExtResource("5_n4shn"), ExtResource("9_uvwy4"), ExtResource("10_qk7vq"), ExtResource("11_l4wi5"), ExtResource("5_n4shn"), ExtResource("9_uvwy4"), ExtResource("10_qk7vq"), ExtResource("11_l4wi5"), ExtResource("5_n4shn"), ExtResource("9_uvwy4"), ExtResource("10_qk7vq"), ExtResource("11_l4wi5"), ExtResource("5_n4shn"), ExtResource("9_uvwy4"), ExtResource("10_qk7vq"), ExtResource("11_l4wi5"), ExtResource("5_n4shn"), ExtResource("9_uvwy4"), ExtResource("10_qk7vq"), ExtResource("11_l4wi5"), ExtResource("5_n4shn"), ExtResource("9_uvwy4"), ExtResource("10_qk7vq"), ExtResource("11_l4wi5"), ExtResource("5_n4shn"), ExtResource("9_uvwy4"), ExtResource("10_qk7vq")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q14op"]
_data = {
"main_menu": SubResource("Animation_puyw2")
}

[node name="StartScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rtdsg")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_w6y72")

[node name="Spotlight" type="Sprite2D" parent="BG"]
modulate = Color(1, 1, 1, 0.368627)
position = Vector2(181, 249)
texture = ExtResource("2_k4snx")

[node name="Man" type="TextureRect" parent="BG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_dcb72")

[node name="Tie" type="Sprite2D" parent="BG/Man"]
position = Vector2(314, 163)
texture = ExtResource("5_n4shn")
region_rect = Rect2(892, 557, 228, 62)

[node name="MoneyParticle" type="CPUParticles2D" parent="BG"]
position = Vector2(565, 675)
amount = 30
lifetime = 3.91
texture = ExtResource("6_tqkca")
emission_shape = 1
emission_sphere_radius = 0.01
direction = Vector2(0, -1)
gravity = Vector2(0, 0)
initial_velocity_min = 78.81
initial_velocity_max = 297.99
scale_amount_max = 1.85
color_ramp = SubResource("Gradient_5gq0x")

[node name="MoneyParticle2" type="CPUParticles2D" parent="BG"]
position = Vector2(247, 675)
amount = 30
lifetime = 3.91
texture = ExtResource("7_jdhgj")
emission_shape = 1
emission_sphere_radius = 0.01
direction = Vector2(0, -1)
gravity = Vector2(0, 0)
initial_velocity_min = 78.81
initial_velocity_max = 297.99
scale_amount_max = 1.85
color_ramp = SubResource("Gradient_5gq0x")

[node name="MoneyParticle3" type="CPUParticles2D" parent="BG"]
position = Vector2(935, 675)
amount = 30
lifetime = 3.91
texture = ExtResource("8_4hl13")
emission_shape = 1
emission_sphere_radius = 0.01
direction = Vector2(0, -1)
gravity = Vector2(0, 0)
initial_velocity_min = 78.81
initial_velocity_max = 297.99
scale_amount_max = 1.85
color_ramp = SubResource("Gradient_5gq0x")

[node name="Title_salary" type="TextureRect" parent="BG"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 1
offset_left = 464.0
offset_top = -11.0
offset_right = 1286.0
offset_bottom = 215.0
texture = ExtResource("5_2vmpo")
expand_mode = 1

[node name="Title_lupin" type="TextureRect" parent="BG"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 1
offset_left = -19.0
offset_top = 402.0
offset_right = 708.0
offset_bottom = 649.0
texture = ExtResource("6_ymiwv")
expand_mode = 1

[node name="Button" type="Button" parent="BG"]
layout_mode = 0
offset_left = 802.0
offset_top = 402.0
offset_right = 1116.0
offset_bottom = 619.0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxTexture_8o0ty")
theme_override_styles/hover = SubResource("StyleBoxTexture_dtuxl")
theme_override_styles/pressed = SubResource("StyleBoxTexture_8o0ty")
theme_override_styles/disabled = SubResource("StyleBoxTexture_8o0ty")
theme_override_styles/focus = SubResource("StyleBoxTexture_8o0ty")
text = "
COMMUTE"

[node name="TextureRect" type="TextureRect" parent="BG/Button"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -598.0
offset_top = -376.0
offset_right = -277.0
offset_bottom = -145.0
texture = ExtResource("12_qqwcj")
expand_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="BG/Button/TextureRect"]
layout_mode = 0
offset_left = 35.0
offset_top = 28.0
offset_right = 292.0
offset_bottom = 181.0
theme_override_colors/default_color = Color(0.615686, 0.615686, 0.615686, 1)
theme_override_colors/font_selected_color = Color(0.615686, 0.615686, 0.615686, 1)
theme_override_colors/selection_color = Color(0.615686, 0.615686, 0.615686, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.615686, 0.615686, 0.615686, 1)
theme_override_colors/table_odd_row_bg = Color(0.615686, 0.615686, 0.615686, 1)
theme_override_colors/table_even_row_bg = Color(0.615686, 0.615686, 0.615686, 1)
theme_override_colors/table_border = Color(0.615686, 0.615686, 0.615686, 1)
theme_override_font_sizes/normal_font_size = 18
theme_override_font_sizes/bold_font_size = 18
theme_override_font_sizes/italics_font_size = 18
theme_override_font_sizes/bold_italics_font_size = 18
theme_override_font_sizes/mono_font_size = 18
bbcode_enabled = true
text = "[wave amp=20freq =10] I'm a Salary Lupin..
What I do is doing nothing staring at computer all day and get paid haha!!!!!
Let's successfully do nothing at work today...[/wave]"
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="BG/Button/TextureRect"]
libraries = {
"": SubResource("AnimationLibrary_f53vc")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q14op")
}

[node name="BGM" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_ojxld")
autoplay = true

[node name="Siren" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_n68e4")
autoplay = true

[node name="WaterMark" type="RichTextLabel" parent="."]
modulate = Color(1, 1, 1, 0.745098)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -109.0
offset_top = -48.0
offset_right = 109.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/default_color = Color(0.262745, 0.262745, 0.262745, 1)
theme_override_font_sizes/normal_font_size = 18
theme_override_font_sizes/bold_font_size = 20
theme_override_font_sizes/italics_font_size = 20
theme_override_font_sizes/bold_italics_font_size = 20
theme_override_font_sizes/mono_font_size = 20
bbcode_enabled = true
text = "[img=50x50]res://Image/character.png[/img][wave amp=20freq =10] Made By KANG² [/wave]"
scroll_active = false

[connection signal="mouse_entered" from="BG/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="BG/Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="BG/Button" to="." method="_on_button_pressed"]
